# ingestor

./: .dockerignore  Cargo.toml  config.yml  dockerfile
.github/workflows/: build-and-push.yml
src/: main.rs
src/altdata/: actor.rs
src/bus/: types.rs
src/config/: config.rs
src/core/: types.rs
src/execution/: actor.rs
src/finjuice/: actor.rs
src/marketdata/: actor.rs
src/rss/: actor.rs
