[package]
name = "ingestor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
async-trait = "0.1.89"
anyhow = "1.0.100"
tokio-util = "0.7.17"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
futures = "0.3.31"
humantime-serde = "1"
config = "0.15.19"
chrono = "0.4.42"
rss = "2.0.12"
scraper = "0.24.0"
chrono-tz = "0.10.4"
